--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
     "react-query": "^3.39.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
