--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+          working-directory: ./server
 
     steps:
     - uses: actions/checkout@v3
