--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,13 +43,12 @@ jobs:
       run: zip -r ./plant-hiker-deploy.zip .
       shell: bash
     
-    # Access Key와 Secret Access Key를 통해 권한을 확인합니다.
-    # 아래 코드에 Access Key와 Secret Key를 직접 작성하지 않습니다.
+    # Access Key와 Secret Access Key를 통해 권한을 확인 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }} # Settings에 등록한 Github Secret이 자동으로 불려옵니다.
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # Settings에 등록한 Github Secret이 자동으로 불려옵니다.
         aws-region: ap-northeast-2
     
     # 압축한 프로젝트를 S3로 전송합니다.
