--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/recoil": "^0.0.9",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
