--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,10 +21,9 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     env:
-          working-directory: ./server
+      working-directory: ./server
 
     steps:
     - uses: actions/checkout@v3
@@ -34,7 +33,7 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      uses: server/gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
         
@@ -42,6 +41,7 @@ jobs:
     - name: Make zip file
       run: zip -r ./plant-hiker-deploy.zip .
       shell: bash
+      working-directory: ${{ env.working-directory }}
     
     # Access Key와 Secret Access Key를 통해 권한을 확인 
     - name: Configure AWS credentials
