:bug: build path

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,9 +22,8 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./server
+    env:
+      working-directory: ./server
 
     steps:
     - uses: actions/checkout@v3
