--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.2",
+    "@emotion/eslint-plugin": "^11.10.0",
     "msw": "^0.47.4",
     "typescript-styled-plugin": "^0.18.2"
   },
