--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -15,17 +8,22 @@ on:
 
 permissions:
   contents: read
-
+  
 env:
-  S3_BUCKET_NAME: plant-hiker-buket
+  S3_BUCKET_NAME: plant-hiker-bucket
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./server
 
     steps:
+    - name: check path
+      run: echo $PWD
+      
+    - name: change path
+      run: cd ./server
+      
     - uses: actions/checkout@v3
     - name: Set up JDK 11
       uses: actions/setup-java@v3
@@ -36,20 +34,21 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
-        
+    
     # build한 후 프로젝트를 압축합니다.
     - name: Make zip file
-      run: zip -r ./plant-hiker-deploy.zip .
+      run: zip -r ./plant-hiker.zip .
       shell: bash
     
-    # Access Key와 Secret Access Key를 통해 권한을 확인 
+    # Access Key와 Secret Access Key를 통해 권한을 확인합니다.
+    # 아래 코드에 Access Key와 Secret Key를 직접 작성하지 않습니다.
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }} # Settings에 등록한 Github Secret이 자동으로 불려옵니다.
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # Settings에 등록한 Github Secret이 자동으로 불려옵니다.
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
         aws-region: ap-northeast-2
     
     # 압축한 프로젝트를 S3로 전송합니다.
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./plant-hiker-deploy.zip s3://$S3_BUCKET_NAME/plant-hiker-deploy.zip
+      run: aws s3 cp --region ap-northeast-2 ./plant-hiker.zip s3://$S3_BUCKET_NAME/plant-hiker.zip
