--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,11 +1,8 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext",
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -22,6 +19,21 @@
     "jsxImportSource": "@emotion/react"
   },
   "include": [
-    "src"
+    "Components",
+    "Const",
+    "Hooks",
+    "images",
+    "Pages",
+    "Recoil",
+    "types",
+    "utils",
+    "App.tsx",
+    "index.css",
+    "index.tsx",
+    "react-app-env.d.ts",
+    "reportWebVitals.ts",
+    "Route.tsx",
+    "setupTests.ts",
+    "tsconfig.paths.json"
   ]
 }
