--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,6 +27,10 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+        
+    - name : adding permission to gradlew
+      run: chmod +x gradlew
+    
     - name: Build with Gradle
       #uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       run: ./server/gradlew build
