--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,7 +29,7 @@ jobs:
         distribution: 'temurin'
         
     - name : adding permission to gradlew
-      run: chmod +x gradlew
+      run: chmod +x ./server/gradlew
     
     - name: Build with Gradle
       #uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
