--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,7 +31,7 @@ jobs:
       working-directory: ./server
       
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build -x #테스트스킵
       working-directory: ./server
       
     # build한 후 프로젝트를 압축합니다.
