--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,3 +51,11 @@ jobs:
     # 압축한 프로젝트를 S3로 전송합니다.
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./plant-hiker.zip s3://$S3_BUCKET_NAME/plant-hiker.zip
+      
+    # CodeDeploy에게 배포 명령을 내립니다.
+    - name: Code Deploy
+      run: >
+        aws deploy create-deployment --application-name plant-hiker
+        --deployment-config-name CodeDeployDefault.AllAtOnce
+        --deployment-group-name plant-hiker-deploy-group
+        --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=plant-hiker.zip
