--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,11 +26,11 @@ jobs:
         distribution: 'temurin'
         
     - uses: actions/checkout@v3
-    - run: touch ./src/main/resources/application.properties
+    - run: touch src/main/resources/application.properties
       working-directory: ./server
-    - run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.properties
+    - run: echo "${{ secrets.APPLICATION }}" > src/main/resources/application.properties
       working-directory: ./server
-    - run: cat ./src/main/resources/application.properties
+    - run: cat src/main/resources/application.properties
       working-directory: ./server
         
     # https://cheese10yun.github.io/github-action-1/
