--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,13 +25,25 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         
+      
+     # application.yml 설정
     - uses: actions/checkout@v3
-    - run: touch ./src/main/resources/application.properties
+    - name: make resources directory
+      run: mkdir ./src/main/resources
       working-directory: ./server
-    - run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.properties
+      
+    - name: Set application.yml
+      run: touch ./src/main/resources/application.properties
       working-directory: ./server
-    - run: cat ./src/main/resources/application.properties
+      
+    - name: bring application.yml
+      run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.properties
       working-directory: ./server
+      
+    - name: check application.yml
+      run: cat ./src/main/resources/application.properties
+      working-directory: ./server
+      
         
     # https://cheese10yun.github.io/github-action-1/
     - name: Grant execute permission for gradlew
