--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -75,7 +75,7 @@ jobs:
     # CodeDeploy에게 배포 명령을 내립니다.
     - name: Code Deploy
       run: >
-        aws deploy create-deployment --application-name plant-hiker
+        aws deploy create-deployment --application-name plant-hiker-application
         --deployment-config-name CodeDeployDefault.AllAtOnce
-        --deployment-group-name plant-hiker-code-deploy-group
+        --deployment-group-name plant-hiker-deploy-group
         --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=plant-hiker.zip
