--- a/server/build.gradle
+++ b/server/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
 	// aop
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+	// Thumbnailator
+	implementation 'net.coobird:thumbnailator:0.4.18'
 }
 
 tasks.named('test') {
