--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
     "react-query": "^3.39.2",
