--- a/.github/workflows/clientCI.yml
+++ b/.github/workflows/clientCI.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Generate Environment Variables File for Production
         run: |
-          echo "REACT_APP_BASE_URL=$REACT_APP_BASE_URL" >> .env
+          echo "REACT_APP_BASE_URL=$REACT_APP_BASE_URL" >> .env.production
         env:
           REACT_APP_BASE_URL: ${{ secrets.REACT_APP_BASE_URL }}
       - name: Install dependencies
