--- a/.github/workflows/clientCI.yml
+++ b/.github/workflows/clientCI.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Generate Environment Variables File for Production
         run: |
           echo "REACT_APP_BASE_URL=$REACT_APP_BASE_URL" >> .env.production
+          working-directory:./client
         env:
           REACT_APP_BASE_URL: ${{ secrets.REACT_APP_BASE_URL }}
       - name: Install dependencies
