--- a/.github/workflows/clientCI.yml
+++ b/.github/workflows/clientCI.yml
@@ -10,9 +10,8 @@ jobs:
       - name: Checkout source code.
         uses: actions/checkout@v2
       - name: Generate Environment Variables File for Production
-        run: |
-          echo "REACT_APP_BASE_URL=$REACT_APP_BASE_URL" >> .env.production
-          working-directory:./client
+        run: echo "REACT_APP_BASE_URL=$REACT_APP_BASE_URL" >> .env.production
+        working-directory: ./client
         env:
           REACT_APP_BASE_URL: ${{ secrets.REACT_APP_BASE_URL }}
       - name: Install dependencies
