--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,7 @@
     "react-secure-storage": "^1.0.21",
     "recoil": "^0.7.6",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
