--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
+    "react-intersection-observer": "^9.4.1",
     "react-query": "^3.39.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.2",
