--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "react-secure-storage": "^1.0.21",
     "recoil": "^0.7.6",
+    "secure-ls": "^1.2.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
