--- a/server/build.gradle
+++ b/server/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	testImplementation 'org.springframework.security:spring-security-test'
 
+	//websocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
 	//amazon s3
 //	implementation 'org.springframework.cloud::spring-cloud-starter-aws'
 	implementation "com.amazonaws:aws-java-sdk-s3:1.12.281"
