:sparkles: plant add

--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
     "recoil": "^0.7.6",
     "secure-ls": "^1.2.6",
     "typescript": "^4.4.2",
