--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/recoil": "^0.0.9",
     "axios": "^1.1.3",
+    "browser-image-compression": "^2.0.0",
     "dayjs": "^1.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
