:art: package changed, any type removed

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "플랜트하이커",
+  "name": "식물생활의 모든 것, 플랜트하이커",
   "icons": [
     {
       "src": "favicon.ico",
